<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tecs.application</groupId>
  <artifactId>jeditor</artifactId>
  <version>0.5.0</version>

  <name>JEditor</name>
  <description>Terminal-based text editor written in Java.</description>
  <url>https://www.github.com/sarweshwaran-rs/jeditor-terminal</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
 
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>22</maven.compiler.release>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jline</groupId>
      <artifactId>jline</artifactId>
      <version>4.1.3</version>
    </dependency>
  </dependencies>

<build>
  <plugins>
        <!-- Java Compiler -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>

            <configuration>
                <release>22</release>
            </configuration>
        </plugin>

        <!-- Unit Tests -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.3.0</version>
        </plugin>

        <!-- Executable JAR -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.4.2</version>

            <configuration>
                <archive>
                    <manifest>
                        <mainClass>
                            com.tecs.application.App
                        </mainClass>
                    </manifest>
                </archive>
            </configuration>
        </plugin>

        <!-- Fat/Uber JAR -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.3</version>

            <executions>
                <execution>
                    <phase>package</phase>

                    <goals>
                        <goal>shade</goal>
                    </goals>

                    <configuration>

                        <createDependencyReducedPom>false</createDependencyReducedPom>

                        <transformers>

                            <transformer implementation=
                                "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">

                                <mainClass>
                                    com.tecs.application.App
                                </mainClass>

                            </transformer>

                        </transformers>

                    </configuration>

                </execution>
            </executions>

        </plugin>

    </plugins>

</build>
</project>
